[package]
name = "media_converter"
version = "0.1.0"
edition = '2024'

[dependencies]
actix-web = "4"
image = { version = "0.25.6", features = ["webp"] }
clap = { version = "4", features = ["derive"] }
chrono = "0.4.40"
httpdate = "1.0.3"
env_logger = "0.11.8"
log = "0.4.27"
psd = "0.3.5"
anyhow = "1.0.98"
actix-files = "0.6.6"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"
ffmpeg-next = "7.1.0"
webp = "0.3.0"
